--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Priyana Agrawal</title>
 </head>
 <body bgcolor="F5EDCE"> 
-    <img src="C:\Users\Administrator\Desktop\Web development\HTML - PERSONAL SITE\Images\download.jpg" alt="image" 
+    <img src="Images\download.jpg" alt="image" 
     style="float:left; margin-right: 10px; border: solid blue 2px; padding: 2px;">
     <h1> Priyana Agrawal</h1>
     <h2> Student, Department of Computer Science-Data Science,<br> ABES ENGINEERING COLLEGE, Ghaziabad</h2> 
