--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Priyana Agrawal</title>
 </head>
 <body bgcolor="F5EDCE"> 
-    <img src="Images\download.jpg" alt="image" 
+    <img src="https://previews.123rf.com/images/mindscanner/mindscanner1406/mindscanner140600054/29344178-word-cloud-with-coding-related-tags.jpg" alt="image" 
     style="float:left; margin-right: 10px; border: solid blue 2px; padding: 2px;">
     <h1> Priyana Agrawal</h1>
     <h2> Student, Department of Computer Science-Data Science,<br> ABES ENGINEERING COLLEGE, Ghaziabad</h2> 
