--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Priyana Agrawal</title>
 </head>
 <body bgcolor="F5EDCE"> 
-    <img src="https://previews.123rf.com/images/mindscanner/mindscanner1406/mindscanner140600054/29344178-word-cloud-with-coding-related-tags.jpg" alt="image" 
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123rf.com%2Fphoto_29344178_word-cloud-with-coding-related-tags.html&psig=AOvVaw017pRsJqPFh6PoCabpBCDS&ust=1672371186891000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCKif6JrJr_wCFQAAAAAdAAAAABAD" alt="image" 
     style="float:left; margin-right: 10px; border: solid blue 2px; padding: 2px;">
     <h1> Priyana Agrawal</h1>
     <h2> Student, Department of Computer Science-Data Science,<br> ABES ENGINEERING COLLEGE, Ghaziabad</h2> 
